# winter2026-assignments

./: .gitignore
A1/: README.md  hw1_dist.ipynb  pyproject.toml
A1/data/: ai_novel.txt  moby_dick.txt  mystery.txt
A2/: README.md  classification_util.py  hw2_dist.ipynb  pyproject.toml  word2vec_util.py
A3/: README.md  pyproject.toml  requirements.txt
A3/a3_attention_snli_dist/: model.py  test_a3_q2.py  train.py  utils.py
A3/a3_prompting_dist/: prompting_gsm.py  prompting_gsm.sh  prompting_snli.py  prompting_snli.sh  test_a3_q3.py  utils.py
A3/a3_prompting_dist/data/: gsm_symbolic_fewshot_pool_200_student.jsonl  snli_fewshot_pool_200.jsonl  snli_test_100.jsonl
A4/: README.md  pyproject.toml  requirements.txt
A4/a4_sampling_dist/: analyze_traces.py  evaluate.py  generate_samples.py  modal_app.py  test_a4_q2.py  utils.py
A4/a4_sampling_dist/data/: gsm_symbolic_test_100.jsonl
A4/a4_sampling_dist/scripts/: analyze_traces.sh  evaluate.sh  generate_samples.sh  get_results.sh
A4/a4_sft_dist/: data_utils.py  download_modal_volumes.py  eval.py  eval_utils.py  modal_app.py  test_a4_q1.py  train.py  training_arguments.py
A4/a4_sft_dist/data/: gsm8k_test_100_non_overlapping.jsonl  gsm8k_test_100_same_templates.jsonl  gsm_symbolic_train_4500_student.jsonl
A4/a4_sft_dist/scripts/: run_sft_eval.sh  run_sft_train.sh  setup_modal.sh
