[project]
name = "hw3"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.5.0",
    "gensim>=4.4.0",
    "gpustat>=1.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "transformers==4.57.3",
    "wandb>=0.24.0",
]
