[project]
name = "a4-finetuning-and-sampling"
version = "0.1.0"
description = "Assignment 4: Supervised Fine-Tuning and Best-of-N Sampling"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "modal>=1.3.2",
    "nltk>=3.9.2",
    "numpy>=2.0.0",
    "pandas>=3.0.0",
    "protobuf>=5.0.0",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.0",
    "torch>=2.10.0",
    "tqdm>=4.67.0",
    "transformers==4.57.6",
    "wandb>=0.24.2",
]
